Revert "Speculative fix for horizontal scroll bar"
This reverts commit d643acae823c6ccd8ccec045a525b8cf1b5e779f.

--- a/Static/public/css/app.css
+++ b/Static/public/css/app.css
@@ -16,9 +16,7 @@ body {
   color: #222;
   line-height: 150%;
   margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
+  padding: 0; }
 
 a {
   color: #000;
